--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url("header.css");
+
 :root {
     --cor-de-fundo:#EBECEE;
-    --branco:#FFFFFF;}
+    --branco:#ffffff;}
 
     body {background-color: var(--cor-de-fundo);}
+    
