--- a/header.css
+++ b/header.css
@@ -18,17 +18,37 @@
     align-items:center;
 }
 .container_imagem{
-    padding:1 em;
+    padding: 1em;
 }
 .lista-menu{
     display:none;
     position:absolute;
-    top:100%
+    top:100%;
+    width:60vW;
 }
 .container__botao:checked ~ .lista-menu{
     display: block;
 }
+
 .lista-menu{
-    display: none;
-    
+    display: none;    
 }
+
+.lista-menu__titulo {
+    color: var(--laranja);
+}
+
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+    }
+
+    .lista-menu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        width: 60vw;
+        }
