--- a/style.css
+++ b/style.css
@@ -5,4 +5,16 @@
     --branco:#ffffff;}
 
     body {background-color: var(--cor-de-fundo);}
+
+    .lista-menu__titulo,
+.lista-menu__item {
+padding: 1em;
+background-color: var(--branco);
+}
     
+:root {
+--cor-de-fundo: #EBECEE;
+--branco: #FFFFFF;
+--laranja: #EB9B00;
+--azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+}
