--- a/header.css
+++ b/header.css
@@ -30,25 +30,28 @@
     display: block;
 }
 
-.lista-menu{
-    display: none;    
+.lista-menu_titulo,
+.lista-menu_item {
+    padding: 1em;
+    background-color: var(--branco);
 }
 
-.lista-menu__titulo {
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+    }
+
+.lista-menu_titulo {
     color: var(--laranja);
+    font-weight: 700;
 }
 
-.lista-menu__link {
+.lista-menu_link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
     }
-
-    .lista-menu {
-        display: none;
-        position: absolute;
-        top: 100%;
-        width: 60vw;
-        }
