--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
 @import url("header.css");
 
 :root {
-    --cor-de-fundo:#EBECEE;
-    --branco:#ffffff;}
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins";
+    }
 
-    body {background-color: var(--cor-de-fundo);}
-
-    .lista-menu__titulo,
-.lista-menu__item {
-padding: 1em;
-background-color: var(--branco);
-}
+    body {background-color: var(--cor-de-fundo);
+          font-family: var(--fonte-principal);
+          font-size: 16px;
+          font-weight: 400;
+            }
     
-:root {
---cor-de-fundo: #EBECEE;
---branco: #FFFFFF;
---laranja: #EB9B00;
---azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-}
+    
+
+
